# BoydEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/FLAC/: Test.flac
assets/GLTF/: SuzanneColor0.glb  TexturedCube.glb
assets/HDR/: ABOUT.md
assets/Shaders/: Background.fs  Background.vs  Cubemap.fs  Cubemap.vs  Forward.fs  Forward.vs  Skybox.fs  Skybox.vs  Standard.fs  Standard.vs
emscripten/: EmUtilities.cmake  LoaderWorker.js  pre.js  shell.html
scripts/: camera.lua  main.lua  main2.lua  test.lua
src/: BoydBuildUtil.cc  BoydEngine.hh  BoydEngine.hh.in  CMakeLists.txt  Main.cc  main.cxx
src/Components/: AllTypes.hh  AudioClip.hh  AudioInternals.hh  AudioSource.hh  BoxCollider.hh  Camera.hh  ColliderBase.hh  ColliderInternals.hh  ComponentLoadRequest.hh  Gltf.hh  LoadRequest.hh  LuaBehaviour.hh  Material.hh  Mesh.hh  RigidBody.hh  Skybox.hh  String.hh  Texture.hh  Transform.hh  Voxels.hh
src/Core/: GameState.cc  GameState.hh  MusicAssetLoader.cc  MusicAssetLoader.hh  Platform.hh  Registrar.hh  SceneManager.cc  SceneManager.hh  Utils.hh  Versioned.hh
src/Debug/: Log.hh
src/Modules/: CMakeLists.txt  Dll.hh  Loader.cc  Loader.hh
src/Modules/AssetLoader/: AllLoaders.cc  AllLoaders.hh  AssetLoader.cc  LoadedAsset.hh  Loader.hh
src/Modules/AssetLoader/Loaders/: AllLoaders.cc  AllLoaders.hh  AudioClip.hh  Gltf.hh  LuaBehaviour.hh  Skybox.hh  String.hh
src/Modules/Audio/: Audio.cc  Utils.cc  Utils.hh
src/Modules/Gfx/: Components.hh  GL3.cc  GL3.hh  GL3Containers.hh  Gfx.cc  Gfx.cpp  Gfx.hh  GfxComponents.hh  Glfw.hh  Input.cc
src/Modules/Gfx/GL3/: GL3.cc  GL3.hh  GL3Containers.hh  GL3Pipeline.cc  GL3Pipeline.hh
src/Modules/Input/: Input.cc
src/Modules/Physics/: ColliderInternals.hh  Physics.cc
src/Modules/Scripting/: 3rdparty.cc  3rdparty.hh  AllTypes.hh  Lua.hh  LuaInternals.hh  Registrar.cc  Registrar.hh  Scripting.cc  Scripting.hh
src/Modules/Voxel/: Voxel.cc
src/Scripting/: Lua.hh
